<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_basicInformation"
    android:layout_width="360dp"
    android:layout_height="772dp"
    android:background="@color/background_blue"
    android:orientation="vertical"
    tools:context=".BasicInformation">

    <ImageButton
        android:layout_width="@dimen/btn_topBack_width"
        android:layout_height="@dimen/btn_topBack_height"
        android:layout_marginLeft="@dimen/btn_topBack_marginLeft"
        android:layout_marginTop="@dimen/btn_topBack_marginTop"
        android:background="@drawable/icon_back" />

    <TextView
        android:id="@+id/tv_basicInformation_title_text"
        style="@style/topBar"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_progressBarIcon_marginTop"
        android:layout_toLeftOf="@+id/tv_progressBarLineOneToTwo"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_progressBarIcon_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_progressbar_icon"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/progressBarIconTest_one"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/group_progressBarIndex_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progressBarIcon_two"
            android:layout_marginTop="@dimen/group_progressBarTest_marginTop"
            android:text="@string/group_progressBar_basicInformation_text"
            android:textColor="@color/white"
            android:textSize="@dimen/group_progressBarText_textSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_progressBarLineOneToTwo"
        android:layout_width="@dimen/group_progressBarLine_width"
        android:layout_height="@dimen/group_progressBarLine_height"
        android:layout_below="@+id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/group_progressBarIcon_two"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/group_progressBarIcon_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_progressBarIcon_marginTop"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_basicInformation_title_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_progressbar_icon"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/progressBarIconTest_two"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/group_progressBarIndex_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progressBarIcon_two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/group_progressBarTest_marginTop"
            android:text="@string/group_progressBar_workExperience_text"
            android:textColor="@color/white"
            android:textSize="@dimen/group_progressBarText_textSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_progressBarLineTwoToThree"
        android:layout_width="@dimen/group_progressBarLine_width"
        android:layout_height="@dimen/group_progressBarLine_height"
        android:layout_below="@+id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/group_progressBarIcon_two"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_progressBarIcon_marginTop"
        android:layout_toRightOf="@id/tv_progressBarLineTwoToThree"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_progressBarIcon_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_progressbar_icon"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/progressBarIconTest_three"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/group_progressBarIndex_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progressBarIcon_two"
            android:layout_marginTop="@dimen/group_progressBarTest_marginTop"
            android:text="@string/group_progressBar_contactMeans_text"
            android:textColor="@color/white"
            android:textSize="@dimen/group_progressBarText_textSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_backgroundCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backGround_Card_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_rectangle" />

    <TextView
        android:id="@+id/conMeans_tv_phone"
        style="@style/conMeans_formKey"
        android:layout_alignTop="@+id/tv_backgroundCard"
        android:text="@string/ConMeans_tv_phone_text" />

    <EditText
        android:id="@+id/conMeans_et_phone"
        style="@style/conMeans_formValue"
        android:layout_alignTop="@+id/conMeans_tv_phone"
        android:layout_toRightOf="@+id/conMeans_tv_phone"
        android:background="@null"
        android:hint="@string/ConMeans_et_phone_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/conMeans_tv_email"
        style="@style/conMeans_formKey"
        android:layout_below="@+id/conMeans_tv_phone"
        android:text="@string/ConMeans_tv_email_text" />

    <EditText
        android:id="@+id/conMeans_et_email"
        style="@style/conMeans_formValue"
        android:layout_alignTop="@+id/conMeans_tv_email"
        android:layout_toRightOf="@+id/conMeans_tv_email"
        android:background="@null"
        android:hint="@string/ConMeans_et_email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/conMeans_tv_address"
        style="@style/conMeans_formKey"
        android:layout_below="@+id/conMeans_tv_email"
        android:text="@string/ConMeans_tv_address_text" />

    <TextView
        android:id="@+id/conMeans_tv_province"
        style="@style/conMeans_detailAddress_formKey"
        android:layout_below="@+id/conMeans_tv_address"
        android:text="@string/ConMeans_tv_province_text" />

    <Spinner
        android:id="@+id/conMeans_spi_province"
        style="@style/conMeans_detailAddress_formValue"
        android:layout_alignTop="@+id/conMeans_tv_province"
        android:layout_toRightOf="@+id/conMeans_tv_province"
        android:background="@null"
        android:entries="@array/province" />

    <TextView
        android:id="@+id/conMeans_tv_city"
        style="@style/conMeans_detailAddress_formKey"
        android:layout_below="@+id/conMeans_tv_province"
        android:text="@string/ConMeans_tv_city_text" />

    <Spinner
        android:id="@+id/conMeans_spi_city"
        style="@style/conMeans_detailAddress_formValue"
        android:layout_alignTop="@+id/conMeans_tv_city"
        android:layout_toRightOf="@+id/conMeans_tv_city"
        android:background="@null" />

    <TextView
        android:id="@+id/conMeans_tv_county"
        style="@style/conMeans_detailAddress_formKey"
        android:layout_below="@+id/conMeans_tv_city"
        android:text="@string/ConMeans_tv_county_text" />

    <Spinner
        android:id="@+id/conMeans_spi_county"
        style="@style/conMeans_detailAddress_formValue"
        android:layout_alignTop="@+id/conMeans_tv_county"
        android:layout_toRightOf="@+id/conMeans_tv_county"
        android:background="@null" />

    <TextView
        android:id="@+id/conMeans_tv_detailAddress"
        style="@style/conMeans_formKey"
        android:layout_below="@+id/conMeans_tv_county"
        android:text="@string/ConMeans_tv_detailAddress_text" />

    <EditText
        android:id="@+id/conMeans_et_detailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conMeans_tv_detailAddress"
        android:layout_alignStart="@+id/conMeans_tv_detailAddress"
        android:layout_alignEnd="@+id/conMeans_et_phone"
        android:layout_marginTop="@dimen/conMeans_et_detailAddress_marginTop"
        android:hint="@string/ConMeans_et_detailAddress_hint"
        android:maxLength="50"
        android:maxLines="1"
        android:textSize="@dimen/conMeans_tv_phone_textSize" />

    <Button
        android:id="@+id/contentMeans_btn_preStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/btn_nextStep_marginLeft"
        android:layout_marginBottom="@dimen/btn_nextStep_marginBottom"
        android:background="@drawable/btn_prestep"
        android:gravity="center"
        android:onClick="preStepReturnWE"
        android:text="@string/contentMeans_btn_preStep_text" />

    <Button

        android:id="@+id/contentMeans_btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/basicInformation_btn_nextStep_marginLeft"
        android:layout_marginBottom="@dimen/btn_nextStep_marginBottom"
        android:background="@drawable/btn_nextstep"
        android:onClick="nextStepFinish"
        android:text="@string/basicInformation_btn_finish_text" />

</RelativeLayout>