<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_basicInformation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    tools:context=".BasicInformation">

    <ImageButton
        android:layout_width="@dimen/btn_topBack_width"
        android:layout_height="@dimen/btn_topBack_height"
        android:layout_marginLeft="@dimen/btn_topBack_marginLeft"
        android:layout_marginTop="@dimen/btn_topBack_marginTop"
        android:background="@drawable/icon_back" />

    <TextView
        android:id="@+id/tv_basicInformation_title_text"
        style="@style/topBar"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/group_progressBar_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_progressBarIcon_marginTop"
        android:layout_toLeftOf="@+id/tv_progressBarLineOneToTwo"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_progressBarIcon_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_progressbar_icon"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/progressBarIconTest_one"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/group_progressBarIndex_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progressBarIcon_two"
            android:layout_marginTop="@dimen/group_progressBarTest_marginTop"
            android:text="@string/group_progressBar_basicInformation_text"
            android:textColor="@color/white"
            android:textSize="@dimen/group_progressBarText_textSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_progressBarLineOneToTwo"
        android:layout_width="@dimen/group_progressBarLine_width"
        android:layout_height="@dimen/group_progressBarLine_height"
        android:layout_below="@+id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/group_progressBarIcon_two"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/group_progressBarIcon_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_progressBarIcon_marginTop"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_basicInformation_title_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_progressbar_icon"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/progressBarIconTest_two"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/group_progressBarIndex_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progressBarIcon_two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/group_progressBarTest_marginTop"
            android:text="@string/group_progressBar_workExperience_text"
            android:textColor="@color/white"
            android:textSize="@dimen/group_progressBarText_textSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_progressBarLineTwoToThree"
        android:layout_width="@dimen/group_progressBarLine_width"
        android:layout_height="@dimen/group_progressBarLine_height"
        android:layout_below="@+id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/group_progressBarIcon_two"
        android:background="@color/progressBarLine_noFinish_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_basicInformation_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_progressBarIcon_marginTop"
        android:layout_toRightOf="@id/tv_progressBarLineTwoToThree"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_progressBarIcon_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_progressbar_icon"
            android:backgroundTint="@color/progressBar_noFinish_background"
            android:gravity="center"
            android:text="@string/progressBarIconTest_three"
            android:textColor="@color/white"
            android:textSize="@dimen/group_progressBarIndex_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progressBarIcon_two"
            android:layout_marginTop="@dimen/group_progressBarTest_marginTop"
            android:text="@string/group_progressBar_contactMeans_text"
            android:textColor="@color/progressBar_noFinish_background"
            android:textSize="@dimen/group_progressBarText_textSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_backgroundCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backGround_Card_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_rectangle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/workExp_scrollView_height"
        android:layout_alignTop="@+id/tv_backgroundCard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/workExp_tv_degree"
                android:layout_width="@dimen/workExp_tv_degree_width"
                android:layout_height="@dimen/basicInformation_tv_choosePosition_height"
                android:layout_marginLeft="@dimen/workExp_tv_degree_marginStart"
                android:layout_marginTop="@dimen/basicInformation_tv_choosePosition_marginTop"
                android:gravity="center|left"
                android:text="@string/workExp_tv_degree_text"
                android:textColor="@color/black"
                android:textSize="@dimen/workExp_tv_textSize"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/workExp_dd_degree"
                android:layout_width="@dimen/workExp_dd_degree_width"
                android:layout_height="@dimen/basicInformation_dd_choosePosition_height"
                android:layout_alignTop="@id/workExp_tv_degree"
                android:layout_marginLeft="@dimen/workExp_dd_degree_marginLeft"
                android:layout_toRightOf="@+id/workExp_tv_degree"
                android:entries="@array/workExp_degree"
                android:gravity="center|right" />

            <TextView
                android:id="@+id/workExp_tv_mainExp"
                android:layout_width="@dimen/workExp_tv_mainExp_width"
                android:layout_height="@dimen/workExp_tv_mainExp_height"
                android:layout_below="@+id/workExp_tv_degree"
                android:layout_alignStart="@id/workExp_tv_degree"

                android:layout_marginTop="@dimen/workExp_tv_mainExp_marginTop"
                android:gravity="center|left"
                android:text="@string/workExp_tv_mainExp_text"
                android:textColor="@color/black"
                android:textSize="@dimen/workExp_tv_textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/workExp_et_mainExp"
                android:layout_width="@dimen/workExp_et_mainExp_width"
                android:layout_height="@dimen/workExp_et_mainExp_height"
                android:layout_below="@+id/workExp_tv_mainExp"
                android:layout_alignStart="@id/workExp_tv_mainExp"
                android:layout_alignEnd="@+id/workExp_dd_degree"
                android:layout_marginTop="@dimen/workExp_et_mainExp_marginTop"
                android:background="@drawable/shape_edittext"
                android:gravity="top|left"
                android:textSize="@dimen/workExp_et_textSize" />

            <TextView
                android:id="@+id/workExp_tv_knowJob"
                android:layout_width="@dimen/workExp_tv_mainExp_width"
                android:layout_height="@dimen/workExp_tv_mainExp_height"
                android:layout_below="@+id/workExp_et_mainExp"
                android:layout_alignStart="@id/workExp_tv_degree"
                android:layout_alignEnd="@+id/workExp_dd_degree"
                android:layout_marginTop="@dimen/workExp_tv_mainExp_marginTop"
                android:gravity="center|left"
                android:text="@string/workExp_tv_know_text"
                android:textColor="@color/black"
                android:textSize="@dimen/workExp_tv_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/workExp_tv_mainTask"
                style="@style/workExp_formKey"
                android:layout_below="@+id/workExp_tv_knowJob"
                android:layout_alignStart="@+id/workExp_tv_knowJob"
                android:text="@string/workExp_tv_mainTask_text" />

            <EditText
                android:id="@+id/workExp_et_mainTask"
                style="@style/workExp_formValue"
                android:layout_alignTop="@+id/workExp_tv_mainTask"
                android:layout_alignEnd="@+id/workExp_dd_degree"
                android:layout_toRightOf="@+id/workExp_tv_mainTask"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/workExp_et_mainTask_hint" />

            <TextView
                android:id="@+id/workExp_tv_demand"
                style="@style/workExp_formKey"
                android:layout_below="@+id/workExp_tv_mainTask"
                android:layout_alignStart="@+id/workExp_tv_knowJob"
                android:text="@string/workExp_et_demand_hint" />

            <EditText
                android:id="@+id/workExp_et_demand"
                style="@style/workExp_formValue"
                android:layout_alignTop="@+id/workExp_tv_demand"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_toRightOf="@+id/workExp_tv_mainTask"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/workExp_et_mainTask_hint" />

            <TextView
                android:id="@+id/workExp_tv_reason"
                style="@style/workExp_formKey"
                android:layout_below="@+id/workExp_tv_demand"
                android:layout_alignStart="@+id/workExp_tv_knowJob"
                android:text="@string/workExp_et_reason_hint" />

            <EditText
                android:id="@+id/workExp_et_reason"
                style="@style/workExp_formValue"
                android:layout_alignTop="@+id/workExp_tv_reason"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_toRightOf="@+id/workExp_tv_mainTask"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/workExp_et_mainTask_hint" />

            <TextView
                android:id="@+id/workExp_tv_interest"
                style="@style/workExp_formKey"
                android:layout_below="@+id/workExp_tv_reason"
                android:layout_alignStart="@+id/workExp_tv_knowJob"
                android:text="@string/workExp_et_interest_hint" />

            <EditText
                android:id="@+id/workExp_et_interest"
                style="@style/workExp_formValue"
                android:layout_alignTop="@+id/workExp_tv_interest"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_toRightOf="@+id/workExp_tv_mainTask"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/workExp_et_mainTask_hint" />

            <TextView
                android:id="@+id/workExp_tv_recommended"
                style="@style/workExp_formKey"
                android:layout_below="@+id/workExp_tv_interest"
                android:layout_alignStart="@+id/workExp_tv_knowJob"
                android:text="@string/workExp_et_recommended_hint" />

            <RadioGroup
                android:id="@+id/workExp_et_recommended"
                style="@style/workExp_formValue"
                android:layout_below="@+id/workExp_tv_interest"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_toRightOf="@+id/workExp_tv_recommended"
                android:gravity="center|right"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/basicInformation_tv_choosePosition_height"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/basicInformation_tv_choosePosition_height"
                    android:layout_marginStart="@dimen/workExp_rb_marginLeft"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/workExp_tv_recommendName"
                style="@style/workExp_formKey"
                android:layout_below="@+id/workExp_tv_recommended"
                android:layout_alignStart="@+id/workExp_tv_knowJob"
                android:text="@string/workExp_tv_recommendName_text" />

            <EditText
                android:id="@+id/workExp_et_recommendName"
                style="@style/workExp_formValue"
                android:layout_alignTop="@+id/workExp_tv_recommendName"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_toRightOf="@+id/workExp_tv_mainTask"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/workExp_et_recommendName_hint" />

            <TextView
                android:id="@+id/workExp_tv_other"
                android:layout_width="@dimen/workExp_tv_mainExp_width"
                android:layout_height="@dimen/workExp_tv_mainExp_height"
                android:layout_below="@+id/workExp_et_recommendName"
                android:layout_alignStart="@id/workExp_tv_degree"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_marginTop="@dimen/workExp_tv_mainExp_marginTop"
                android:gravity="center|left"
                android:text="@string/workExp_tv_other_text"
                android:textColor="@color/black"
                android:textSize="@dimen/workExp_tv_textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/workExp_et_other"
                android:layout_width="@dimen/workExp_et_mainExp_width"
                android:layout_height="@dimen/workExp_et_mainExp_height"
                android:layout_below="@+id/workExp_tv_other"
                android:layout_alignStart="@id/workExp_tv_knowJob"
                android:layout_alignEnd="@id/workExp_dd_degree"
                android:layout_marginTop="@dimen/workExp_et_other_marginTop"
                android:layout_marginBottom="@dimen/workExp_et_other_marginBottom"
                android:background="@drawable/shape_edittext"
                android:gravity="center|right"
                android:textSize="@dimen/workExp_et_textSize" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/workExperience_btn_preStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/btn_nextStep_marginLeft"
        android:layout_marginBottom="@dimen/btn_nextStep_marginBottom"
        android:background="@drawable/btn_prestep"
        android:gravity="center"
        android:onClick="preStepReturnBI"
        android:text="@string/contentMeans_btn_preStep_text" />

    <Button
        android:id="@+id/workExperience_btn_nextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_nextstep"
        android:onClick="nextStepToCM"
        android:text="@string/basicInformation_btn_nextstep_text" />

</RelativeLayout>